# Python-Data-Science-Tutorial

./: .gitignore  README.md  pyproject.toml
Data Capstone Project/911 Calls Project/: 911 Calls.ipynb
Data Capstone Project/Finance Project/: Finance Project - Solutions.ipynb  Finance Project.ipynb
Data Visualization/Geographical Plotting/: Choropleth Maps Exercise.ipynb  Choropleth Maps.ipynb
Data Visualization/Matplotlib/: An Introduction.ipynb  Matplotlib Exercises.ipynb
Data Visualization/Pandas/: Pandas Built-in Data Visualization.ipynb  Pandas Data Visualization Exercise.ipynb
Data Visualization/Plotly and Cufflinks/: Plotly and Cufflinks.ipynb
Data Visualization/Seaborn/: Categorical Plots.ipynb  Distribution Plots.ipynb  Grids.ipynb  Matrix Plots.ipynb  Regression Plots.ipynb  Seaborn Exercises.ipynb  Style and Color.ipynb
Deep Learning/: 00-Keras-Syntax-Basics.ipynb  01-Keras-Regression.ipynb  02-Keras-Classification.ipynb  03-Keras-Project-Exercise.ipynb  04-Tensorboard.ipynb
Machine Learning Sections/Decision Trees and Random Forests/: Decision Trees and Random Forest Project.ipynb  Decision Trees and Random Forests in Python.ipynb
NumPy/: NumPy Arrays.ipynb  NumPy Indexing and Selection.ipynb  NumPy Operations.ipynb  Numpy Exercise .ipynb
Pandas/: Data Input and Output.ipynb  DataFrames-1.ipynb  DataFrames-2.ipynb  DataFrames-3.ipynb  Ecommerce Purchases Exercise.ipynb  Groupby.ipynb  Index.md  Merging, Joining, and Concatenating.ipynb  Missing Data.ipynb  Operations.ipynb  SF Salaries Exercise.ipynb  Series.ipynb
(+19 files in other folders)
