[tool.poetry]
name = "python-data-science-tutorial"
version = "0.1.0"
description = ""
authors = ["Gary Loayza <loayzag91@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
numpy = "^1.19.0"
pandas = "^1.0.5"
matplotlib = "^3.2.2"
plotly = "^4.8.2"
cufflinks = "^0.17.3"
seaborn = "^0.10.1"
chart-studio = "^1.1.0"
pandas-datareader = "^0.9.0"
scikit-learn = "^0.23.1"
nltk = "^3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
